2004-05-24  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* mail-account-gui.c (mail_account_gui_build_extra_conf) : added empty 
       handling for CAMEL_PROVIDER_CONF_HIDDEN
	* (extract_values) : added handling for CAMEL_PROVIDER_CONF_HIDDEN


2004-05-24  Not Zed  <NotZed@Ximian.com>

	* message-list.c (regen_list_regened): pull the message from the
	regen list before we check the list and pending uid.

	* em-folder-view.c (emfv_enable_menus): remove the hack for
	enabling select delete from here and put it in the right place.
	(em_folder_view_get_popup_target): put it here so its consistent.

2004-05-22  Not Zed  <NotZed@Ximian.com>

	* mail-tools.c (mail_tool_uri_to_folder): put note_store back in.
	Quick hack to fix the issue of folders being opened before we hook
	onto folder_created.

	* mail-folder-cache.c: remove 'name' from update struct, not used
	anymore

	** Another unread count bug, #58814.

	* mail-vfolder.c (context_rule_added):
	* mail-tools.c (mail_tool_uri_to_folder):
	* mail-component.c (mc_add_local_store_done): don't call mail note
	folder anymore, fix up headers.

	* mail-folder-cache.c (store_folder_opened)
	(mail_note_store_remove, mail_note_store): handle the new
	store:folder_opened signal.  Don't need the mail_note_folder hack
	anymore, mail_tool_uri_to_folder slowly does less.

2004-05-21  Not Zed  <NotZed@Ximian.com>

	* mail-mt.c (do_call): add marshaller for p_ppppp call.

	* mail-session.c (get_password): fix for camel api changes.
	(forget_password): same.

	** See #58376.

	* message-list.c (mail_regen_list): do some timeout foo so we
	don't keep doing list regnerations if we're getting called too
	often.  God knows what this will break.
	(message_list_set_selected): removede bug printf.
	(regen_list_free): move the message-list poking stuff into
	regen_list_regened.
	(message_list_set_folder): call mail_regen_cancel to cancel any
	regen stuff.
	(mail_regen_cancel): cancel/clear outstanding regenerations.